== In Git 

=== New Features
* Coloured output that spans several lines sets colours for each line. (Aslak Hellesøy)
* New bundler attribute on the Rake task, allowing faster execution. (Aslak Hellesøy)
* Fix Table#rows cell ordering in ruby 1.8. (#47_github Brian Dunn)
* JUnit Formatter: record skipped/pending/undefined scenario results (#655 meeee)

== 0.10.2 (2011-03-21)

=== Bugfixes
* Neuter both MiniTest::Unit and Test::Unit's overzealous test runners. (Aslak Hellesøy)

== 0.10.1 (2011-03-20)

=== New Features
* The #embed method can take a 3rd optional label argument. In the HTML report that's used for the link title. (Pat Leamon)
* Render .wire files through ERB (Kevin Olbrich)
* Happy coexistence with Rake 0.9 (Cezary Baginski)
* Add -l, --lines option just like rspec's (Gabriel Horner)
* Support for named transforms. See features/transforms.feature (Matt Wynne)
* Experimental support for non-UTF-8 encoding in feature files. A "# encoding=iso-8859-1" header (or any other encoding)
  in the file will read the file in with that encoding and convert it to UTF-8 before it's parsed with gherkin.
  Step definition arguments will be passed in UTF-8 encoded strings regardless of the encoding in the feature file.
* Better error message if there is no features directory (David Lindes)
* Include scenario file reference in html formatter output (Brandon Faloona)
* Relax gem dependencies to use >= instead of ~> (Rob Slifka, Aslak Hellesøy)

=== Bugfixes
* Missing methods in Runtime::ForProgrammingLanguages - make v8 example run again (Chris Mytton)
* Features files are sorted before they are executed, giving consistent results across different OSes (Guewen Baconnier)
* Remove duplicate lines in backtraces in the HTML report (Jari Bakken) 

== 0.10.0 (2010-12-07)

We're bumping the minor number in this release because there are some incompatible changes in the JSON support.