@@ -1,6 +1,7 @@
 == In Git 
 
 === New Features
+* Better JUnit formatter support for sub directories and scenario outlines (#59, #61 Matt Simpson)
 * Coloured output that spans several lines sets colours for each line. (Aslak Hellesøy)
 * New bundler attribute on the Rake task, allowing faster execution. (Aslak Hellesøy)
 * Fix Table#rows cell ordering in ruby 1.8. (#47_github Brian Dunn)
